# OCR_facturas

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py  main.py
app/api/routes/: invoices.py
app/api/schemas/: __init__.py  invoices.py
app/application/: __init__.py
app/application/pipeline/: __init__.py  digital_pipeline.py  extract_candidates.py  normalize_document.py  ocr_pipeline.py  resolve_fields.py  tax_table_extractor.py  xml_pipeline.py
app/application/ports/: __init__.py  invoice_extractor.py  layout_analyzer.py  ocr_engine.py  pdf_reader.py  xml_extractor.py  xml_parser.py
app/domain/: errors.py
app/domain/services/: date_validator.py  tax_id_validator.py  totals_validator.py
app/infrastructure/layout/: __init__.py  paddle_structure_engine.py
app/infrastructure/ocr/: __init__.py  paddle_ocr_engine.py
app/infrastructure/pdf/: __init__.py  pymupdf_reader.py
app/infrastructure/vlm/: __init__.py  qwen_vl_extractor.py  vlm_invocation_rules.py  vlm_pipeline.py
app/infrastructure/xml/: __init__.py  embedded_xml_extractor.py  facturae_parser.py
app/shared/: __init__.py  debug_info.py  logging.py  money.py
docker/: api.Dockerfile  vlm.Dockerfile
docs/: arquitectura-extraccion-facturas.md  deployment.md  evaluation.md  invoice_schema.md  plan-implantacion.md
scripts/: evaluate_extraction.py
tests/fixtures/: README.md
tests/fixtures/expected_json/: digital.json  hybrid.json  scanned.json
tests/integration/: test_invoice_contract.py
tests/unit/: fake_ocr_engine.py  fake_vlm_extractor.py  test_date_validator.py  test_evaluator.py  test_facturae_parser.py  test_health.py  test_layout_and_tax_table.py  test_logging.py  test_money.py  test_normalize_document.py  test_ocr_pipeline.py  test_pdf_reader.py  test_resolve_fields.py  test_tax_id_validator.py  test_totals_validator.py  test_vlm_extractor.py  test_vlm_pipeline.py  test_xml_extractor.py  test_xml_pipeline.py
