[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-facturas"
version = "0.1.0"
description = "API local para extracción auditable de datos de facturas PDF."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "pydantic>=2.7,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pymupdf>=1.24,<2.0",
    "pillow>=10.0,<11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.4,<1.0",
]
# PaddleOCR para OCR de PDFs escaneados.
# Requiere PaddlePaddle (GPU o CPU) + modelos de detección y reconocimiento.
# Install GPU:  pip install paddlepaddle-gpu (requiere NVIDIA GPU)
# Install CPU:  pip install paddlepaddle
# Los modelos se descargan automáticamente (~40MB).
# Sin esta dependencia, el pipeline OCR responde con error controlado
# y la API sigue funcionando para PDFs digitales y XML embebido.
paddleocr = [
    "pypaddleocr>=0.1",
    # Meta-dependency note: we intentionally do NOT pin paddlepaddle-gpu here
    # because GPU support is environment-specific (CUDA version, etc.).
    # The user must install the appropriate PaddlePaddle variant for their
    # hardware manually. PaddleOCR will raise a clear ImportError if the
    # runtime dependency is missing.
]

# VLM local (Qwen2.5-VL) para casos complejos.
# Requiere vLLM o Transformers + accelerate + qwen-vl-utils.
# Install vLLM: pip install vllm>=0.4.0
# Install Transformers: pip install transformers>=4.41.0 qwen-vl-utils accelerate
# Los modelos se descargan automáticamente (~7GB para Qwen2.5-VL-7B).
# Sin esta dependencia, el sistema responde con error controlado
# y la API sigue funcionando para PDFs digitales, XML y OCR.
vlm = [
    "openai>=1.12",
    # Meta-dependency note: we do NOT pin vllm here because GPU support
    # is environment-specific. The user must install the appropriate backend
    # (vLLM or Transformers) manually for their hardware.
    # vLLM install: pip install vllm>=0.4.0
    # Transformers install: pip install transformers>=4.41.0 qwen-vl-utils accelerate
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docs*", "docker*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
